# raspicam_opencv_streamer

./: .raspicam_opencv_streamer.cpp.swp  CMakeLists.txt  Source.cpp  play.sh  raspicam_cv_stream.cpp  raspicam_cv_stream_2.cpp  raspicam_opencv_streamer.cpp  video-write.cpp
legacy/: Source.cpp  bgsubtract2.cpp
script/: out.mjpg  play_cv.sh  stream_it.sh  test_stream.sh
stream/: out.mjpg
